[package]
name = "rgb-schemata"
version = "0.11.0-beta.6"
description = "Collection of the official RGB smart contract schemata"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-schemata"
rust-version = "1.69.0" # Due to TOML dependency in amplify crate
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "schemata"

[dependencies]
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.4"
strict_types = "2.7.0-beta.4"
aluvm = "0.11.0-beta.6"
bp-core = "0.11.0-beta.6"
# TODO: To test testnet4 upstream and downstream, 
# git dependencies were used temporarily during development
rgb-std = { git = "https://github.com/will-bitlight/rgb-std.git", rev = "78a4951", features = ["fs"]}
rgb-interfaces = { git = "https://github.com/will-bitlight/rgb-interfaces.git", rev = "19526d5"}
chrono = "0.4.37"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"

[dev-dependencies]
chrono = "0.4.31"
serde_yaml = "0.9.27"

[features]
all = ["log"]
log = ["aluvm/log"]
